@@ -79,7 +79,7 @@ div.input_group3 {
 }
 
 #company_div div.input_group2 label {
-	width: 6em;
+	width: 8em;
 }
 
 #credit_div label {
